[package]
name = "wasm_promises_example"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
futures-executor = "0.3"
wasm-bindgen-test = "0.3"